2021-10-11  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h: Idem

2021-10-10  Travers Ching

	* Added `signature` attribute to attributes.cpp

2021-10-02  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/docker.yaml (jobs): Add container builder action

2021-10-01  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

	* inst/NEWS.Rd: Updated

2021-09-29  Iñaki Ucar  <iucar@fedoraproject.org>

	* inst/include/Rcpp/XPtr.h: Check for new define
        `RCPP_USE_FINALIZE_ON_EXIT` to flip the value of XPtr's `finalizeOnExit`
        parameter from false (default) to true.
	* inst/tinytest/test_xptr.R: Added test for this functionality.

2021-09-27  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added total downloads badge

2021-09-06  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci-4.0/Dockerfile: Using R 4.0.5 to build ci-4.0
	* .github/workflows/ci.yaml (jobs): Also run against R 4.0.*

2021-09-05  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/Misc/piSugar.cpp (piSugar): Remove spurious call to
	RNGScope we do not need with Rcpp Attributes
	* inst/examples/RcppGibbs/RcppGibbs.R (Rgibbs): Comment on two uses
	of RNGScope as historical in pre-Attributes code
	* inst/examples/RcppGibbs/timeRNGs.R: Idem for one more

2021-08-05  Dirk Eddelbuettel  <edd@debian.org>

	* inst/bib/Rcpp.bib: Use https for CRAN URLs
	* vignettes/rmd/Rcpp.bib: Idem

2021-07-25  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2021-07-24  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/rmd/Rcpp-FAQ.Rmd: New entry on growing vectors

2021-07-08  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem
